--- a/package.json
+++ b/package.json
@@ -3,17 +3,50 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coinbase/wallet-sdk": "^3.3.0",
+    "@lingui/macro": "^3.14.0",
+    "@popperjs/core": "^2.11.5",
+    "@reach/portal": "^0.17.0",
+    "@react-hook/window-scroll": "^1.3.0",
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
+    "@types/ms.macro": "^2.0.0",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/rebass": "^4.0.10",
+    "@types/styled-components": "^5.1.25",
+    "@types/ua-parser-js": "^0.7.36",
+    "@uniswap/redux-multicall": "^1.1.5",
+    "@uniswap/sdk-core": "^3.0.1",
+    "@uniswap/v2-sdk": "^3.0.1",
+    "@uniswap/v3-sdk": "^3.9.0",
+    "@walletconnect/ethereum-provider": "1.7.1",
+    "@web3-react/coinbase-wallet": "^8.0.33-beta.0",
+    "@web3-react/core": "^8.0.33-beta.0",
+    "@web3-react/eip1193": "^8.0.25-beta.0",
+    "@web3-react/gnosis-safe": "^8.0.5-beta.0",
+    "@web3-react/metamask": "^8.0.26-beta.0",
+    "@web3-react/network": "^8.0.26-beta.0",
+    "@web3-react/walletconnect": "^8.0.34-beta.0",
+    "fortmatic": "^2.4.0",
+    "ms.macro": "^2.0.0",
+    "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
+    "react-popper": "^2.3.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "rebass": "^4.0.7",
+    "redux-localstorage-simple": "^2.5.1",
+    "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
+    "ua-parser-js": "^1.0.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
