--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.2.4",
     "@coinbase/wallet-sdk": "^3.3.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@lingui/macro": "^3.14.0",
     "@lingui/react": "^3.14.0",
     "@metamask/jazzicon": "^2.0.0",
@@ -42,12 +45,15 @@
     "@web3-react/network": "^8.0.26-beta.0",
     "@web3-react/walletconnect": "^8.0.34-beta.0",
     "fortmatic": "^2.4.0",
+    "framer-motion": "^6.5.0",
     "ms.macro": "^2.0.0",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-icons": "^4.4.0",
     "react-popper": "^2.3.0",
+    "react-pro-sidebar": "^0.7.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
